Set up dependencies

--- a/package.json
+++ b/package.json
@@ -13,5 +13,18 @@
 		"gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
 	},
 	"author": "Walker Marlatt",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"css-loader": "^6.8.1",
+		"css-minimizer-webpack-plugin": "^5.0.1",
+		"eslint": "^8.53.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.29.0",
+		"html-webpack-plugin": "^5.5.3",
+		"mini-css-extract-plugin": "^2.7.6",
+		"style-loader": "^3.3.3",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4"
+	}
 }
